@@ -30,6 +30,10 @@ git-annex (6.20170102) UNRELEASED; urgency=medium
   * Fix build with aws 0.16. Thanks, aristidb.
   * assistant: Make --autostart --foreground wait for the children it
     starts. Before, the --foreground was ignored when autostarting.
+  * initremote: When a uuid= parameter is passed, use the specified
+    UUID for the new special remote, instead of generating a UUID.
+    This can be useful in some situations, eg when the same data can be
+    accessed via two different special remote backends.
 
  -- Joey Hess <id@joeyh.name>  Fri, 06 Jan 2017 15:22:06 -0400
 
